--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -19,12 +19,20 @@
 .sticky-status {
   @extend %uppercase;
   @extend %twelve-pixels;
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: inline-block;
+  margin-bottom: $baseline-height/2;
+  margin-right: $baseline-height/2;
   background: #000;
   color: #fff;
   font-family: $pt-sans;
   padding: 6px 12px;
   font-weight: 700;
+}
+.has-post-thumbnail {
+
+  .sticky-status {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
