--- a/style.css
+++ b/style.css
@@ -479,14 +479,20 @@ a img {
 }
 
 .sticky-status {
-  position: absolute;
-  top: 0;
-  left: 0;
+  display: inline-block;
+  margin-bottom: 0.75em;
+  margin-right: 0.75em;
   background: #000;
   color: #fff;
   font-family: "PT Sans", sans-serif;
   padding: 6px 12px;
   font-weight: 700;
+}
+
+.has-post-thumbnail .sticky-status {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .comment-respond {
