style fixes and improvements to the post list widget

--- a/sass/_menu_secondary.scss
+++ b/sass/_menu_secondary.scss
@@ -109,6 +109,7 @@
   .menu-secondary-container {
     display: block;
     float: left;
+    text-align: left;
   }
   .menu-secondary {
     padding: 0;
