--- a/style.css
+++ b/style.css
@@ -2223,11 +2223,12 @@ a img {
     padding: 1.5em 2.778% 0;
   }
   .sidebar .widget {
-    width: 49%;
-    float: left;
+    width: 48%;
+    float: right;
   }
   .sidebar .widget:nth-child(odd) {
-    margin-right: 2%;
+    margin-right: 4%;
+    float: left;
   }
 
   .sidebar-left {
@@ -2581,23 +2582,24 @@ a img {
   margin-bottom: 0.75em;
   padding-bottom: 0.75em;
 }
-.layout-rows .rows > article,
-.layout-rows .rows-excerpt > article,
-.layout-rows-excerpt .rows > article,
-.layout-rows-excerpt .rows-excerpt > article {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+.layout-rows .rows > article:after,
+.layout-rows .rows-excerpt > article:after,
+.layout-rows-excerpt .rows > article:after,
+.layout-rows-excerpt .rows-excerpt > article:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0;
 }
 .layout-rows .rows .featured-image,
 .layout-rows .rows-excerpt .featured-image,
 .layout-rows-excerpt .rows .featured-image,
 .layout-rows-excerpt .rows-excerpt .featured-image {
-  float: left;
-  width: 28.57%;
+  display: inline-block;
+  vertical-align: middle;
+  width: 30%;
   padding-bottom: 18.8562%;
   margin-right: 12px;
 }
@@ -2605,10 +2607,15 @@ a img {
 .layout-rows .rows-excerpt .post-header,
 .layout-rows-excerpt .rows .post-header,
 .layout-rows-excerpt .rows-excerpt .post-header {
-  -webkit-flex: 1;
-  -ms-flex: 1;
-  flex: 1;
   margin: 0;
+}
+.layout-rows .rows.has-post-thumbnail .post-header,
+.layout-rows .rows-excerpt.has-post-thumbnail .post-header,
+.layout-rows-excerpt .rows.has-post-thumbnail .post-header,
+.layout-rows-excerpt .rows-excerpt.has-post-thumbnail .post-header {
+  display: inline-block;
+  vertical-align: middle;
+  width: calc(70% - 17px);
 }
 
 .layout-rows-excerpt .rows-excerpt > article {
