--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 $pt-serif: 'PT Serif', serif;
 $pt-sans: 'PT Sans', sans-serif;
-$abril-fatface: 'Abril Fatface', cursive;
+$abril-fatface: 'Abril Fatface', 'Arial Black', cursive;
 $baseline-height: 1.5em;
 $column: 2.778%;
 
