theme check updates

--- a/sass/_info.scss
+++ b/sass/_info.scss
@@ -3,11 +3,11 @@ Theme Name: Mission
 Theme URI: https://www.competethemes.com/mission/
 Author: Compete Themes
 Author URI: https://www.competethemes.com/
-Description: Mission is a bold and minimalist blog theme for publishers who want to be heard.
+Description: For publishers on a mission. Mission is a news theme for publishers who want their content to be seen and heard. Premium-quality design adds credibility to every word you write, and a fully responsive layout ensures your site looks fantastic on every screen. The aesthetic is timeless and modeled after classic news sites like the New York Times. Use Mission to setup a news site on any subject from health to finance. View the fully-setup live demo here: https://www.competethemes.com/demos/?theme=mission
 Version: 0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: gray, silver, white, light, dark, two-columns, right-sidebar, left-sidebar, responsive-layout, custom-menu, featured-images, sticky-post, theme-options, threaded-comments, translation-ready
+Tags: three-columns, left-sidebar, right-sidebar, custom-logo, custom-menu, featured-images, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, blog, entertainment, news
 Text Domain: mission
 
 Mission WordPress Theme, Copyright 2017 Compete Themes
