--- a/style.css
+++ b/style.css
@@ -2680,12 +2680,12 @@ a img {
     padding: 0.75em 0;
     margin: 0;
   }
-  .layout-double .double:nth-child(odd) {
+  .layout-double .double:nth-of-type(odd) {
     padding-left: 0.75em;
     margin-left: -1px;
     border-left: solid 1px #DCDCDC;
   }
-  .layout-double .double:nth-child(even) {
+  .layout-double .double:nth-of-type(even) {
     padding-right: 0.75em;
     clear: left;
     border-right: solid 1px #DCDCDC;
