--- a/style.css
+++ b/style.css
@@ -2777,3 +2777,46 @@ a img {
     /* 28px */
   }
 }
+@media all and (min-width: 50em) {
+  .single-post.layout-post-right-sidebar .content-container:before {
+    display: none;
+  }
+  .single-post.layout-post-right-sidebar .main {
+    margin-left: 25%;
+  }
+  .single-post.layout-post-right-sidebar .entry article > .featured-image {
+    left: -56%;
+    width: 156%;
+  }
+
+  .single-post.layout-post-left-sidebar .content-container:after {
+    display: none;
+  }
+  .single-post.layout-post-left-sidebar .entry article > .featured-image {
+    width: 156%;
+  }
+
+  .single-post.layout-post-no-sidebar .content-container:before, .single-post.layout-post-no-sidebar .content-container:after {
+    display: none;
+  }
+  .single-post.layout-post-no-sidebar .main {
+    float: none;
+  }
+  .single-post.layout-post-no-sidebar .entry article > .featured-image {
+    left: -28%;
+    width: 156%;
+  }
+  .single-post.layout-post-no-sidebar .post-header {
+    position: relative;
+    left: -14%;
+    width: 128%;
+    text-align: center;
+    margin: 1.125em 0 1.5em;
+  }
+  .single-post.layout-post-no-sidebar .post-title {
+    font-size: 2.375em;
+    /* 38px / 16px */
+    line-height: 1.342;
+    /* 51px */
+  }
+}
