--- a/styles/customizer.css
+++ b/styles/customizer.css
@@ -4,32 +4,67 @@
 /* Social Media Brand Colors */
 /*===== Mixins =====*/
 /***** Silent Classes *****/
-.upgrades-ad {
-  text-align: center;
-  border-bottom: solid 1px #eee;
+#accordion-section-ct_mission_pro .accordion-section-title {
+  color: #fff;
+  background: #05B0E7;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
 }
-.upgrades-ad a {
-  display: block;
-  padding: 9px 0;
-  color: white;
-  background: #43b3c4;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
+#accordion-section-ct_mission_pro .accordion-section-title:after {
+  color: #fff;
 }
-.upgrades-ad a:link, .upgrades-ad a:visited, .upgrades-ad a:hover, .upgrades-ad a:active, .upgrades-ad a:focus {
-  color: white;
+#accordion-section-ct_mission_pro .accordion-section-title:hover, #accordion-section-ct_mission_pro .accordion-section-title:active, #accordion-section-ct_mission_pro .accordion-section-title:focus {
+  background: #3A96B5 !important;
+  color: #fff !important;
 }
-.upgrades-ad a:hover, .upgrades-ad a:active, .upgrades-ad a:focus {
-  background: #3ea5b3;
+#accordion-section-ct_mission_pro .accordion-section-title:hover:after, #accordion-section-ct_mission_pro .accordion-section-title:active:after, #accordion-section-ct_mission_pro .accordion-section-title:focus:after {
+  color: #fff !important;
 }
-.upgrades-ad a:hover span, .upgrades-ad a:active span, .upgrades-ad a:focus span {
-  right: -3px;
+
+#customize-control-mission_pro {
+  background: white;
+  border: solid 1px #DCDCDC;
+  padding: 6px 24px;
+  box-sizing: border-box;
 }
-.upgrades-ad span {
+#customize-control-mission_pro ul {
+  list-style: disc;
+  padding-left: 15px;
+}
+#customize-control-mission_pro img {
   position: relative;
-  right: 0;
-  -webkit-transition: right 0.15s ease-in-out;
-  transition: right 0.15s ease-in-out;
+  max-width: calc(100% + 48px);
+  top: -6px;
+  left: -24px;
+  border-bottom: solid 1px #DCDCDC;
+}
+#customize-control-mission_pro .bold {
+  font-weight: 600;
+  font-size: 16px;
+}
+#customize-control-mission_pro .button-wrapper {
+  text-align: center;
+}
+#customize-control-mission_pro .mission-pro-button {
+  display: inline-block;
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 15px 24px;
+  margin: 12px auto;
+  background: #FF931E;
+  color: #fff;
+  text-decoration: none;
+  -webkit-transition: background 0.2s;
+  transition: background 0.2s;
+}
+#customize-control-mission_pro .mission-pro-button:before {
+  content: '\f06e';
+  font-family: 'FontAwesome';
+  margin-right: 6px;
+}
+#customize-control-mission_pro .mission-pro-button:hover, #customize-control-mission_pro .mission-pro-button:active, #customize-control-mission_pro .mission-pro-button:focus {
+  background: #FF8A23;
 }
 
 #sub-accordion-section-ct_mission_social_media_icons #customize-control-email-form {
