Mission News renaming

--- a/sass/customizer.scss
+++ b/sass/customizer.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-// Mission Pro section
+// Mission News Pro section
 #accordion-section-ct_mission_pro {
 
   .accordion-section-title {
