--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*
-Theme Name: Mission
+Theme Name: Mission News
 Theme URI: https://www.competethemes.com/mission/
 Author: Compete Themes
 Author URI: https://www.competethemes.com/
-Description: For publishers on a mission. Mission is a news theme for publishers who want their content to be seen and heard. Premium-quality design adds credibility to every word you write, and a fully responsive layout ensures your site looks fantastic on every screen. The aesthetic is timeless and modeled after classic news sites like the New York Times. Use Mission to setup a news site on any subject from health to finance. View the fully-setup live demo here: https://www.competethemes.com/demos/?theme=mission
+Description: For publishers on a mission. Mission News is a newspaper theme for publishers who want their content to be seen and heard. Premium-quality design adds credibility to every word you write, and a fully responsive layout ensures your site looks fantastic on every screen. The aesthetic is timeless and modeled after classic news sites like the New York Times. Use Mission News to setup a news site on any subject from health to finance. View the fully-setup live demo here: https://www.competethemes.com/demos/?theme=mission
 Version: 1.01
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: three-columns, left-sidebar, right-sidebar, custom-logo, custom-menu, featured-images, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, blog, entertainment, news
 Text Domain: mission
 
-Mission WordPress Theme, Copyright 2017 Compete Themes
-Mission is distributed under the terms of the GNU GPL
+Mission News WordPress Theme, Copyright 2017 Compete Themes
+Mission News is distributed under the terms of the GNU GPL
 */
 /*===== Variables =====*/
 /* Theme Colors */
