--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -183,7 +183,7 @@
     color: $color-gray-60;
   }
 }
-.dropdown-navigation i {
+.rtl .dropdown-navigation i {
   transform: rotate(180deg);
 }
 .menu-primary-items {
