renamed function name prefix

--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -67,7 +67,7 @@
 }
 .widgets-php #available-widgets {
 
-  [id*=ct_mission_post_list] .widget-top {
+  [id*=ct_mission_news_post_list] .widget-top {
     background: #05B0E7;
 
     h3 {
