--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Version: 1.03
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: three-columns, left-sidebar, right-sidebar, custom-logo, custom-menu, featured-images, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, blog, entertainment, news
-Text Domain: mission
+Text Domain: mission-news
 
 Mission News WordPress Theme, Copyright 2017 Compete Themes
 Mission News is distributed under the terms of the GNU GPL
